# bevy_assetripper_renderer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
assets/materials/: M_Apple_01_A.mat
assets/mesh/: SM_Apple_01_A.glb
src/: main.rs  mat_gen.rs
